--- a/Provincias.html
+++ b/Provincias.html
@@ -254,7 +254,7 @@
     <p> La provincia de Buenos Aires cuenta con más de 100 aeródromos y aeropuertos públicos, de los cuales 26 poseen
         pista pavimentada.<br>
 
-        <img src="/asests/imagenes/Aerupuertos.jpg" alt="Aeropuertos" width="40%">
+        <img src="/asests/imagenes/Aerupuertos.jpg" alt="Aeropuertos" width="40%"> <br>
 
         Los siguientes son los únicos que pertenecen al Sistema Nacional de Aeropuertos:
 
@@ -299,6 +299,8 @@
 
 
     <h3> Puertos</h3>
+
+    <p> Los principales puertos de la provincia de Buenos Aires son los siguientes: </p>
 
     <table> 
         <tr> 
@@ -394,28 +396,10 @@
         (limón), en San Nicolás se destacan los fertilizantes y la siderurgia y en el Puerto de Coronel Rosales, se
         embarca el petróleo crudo.
 
-    </p>
+    </p> <br>
 
-    <p> Los principales puertos de la provincia de Buenos Aires son los siguientes:
-    <ul>
-        <li> Puerto Ingeniero White</li>
-
-        <li> Puerto Galván</li>
-
-        <li> Puerto Rosales</li>
-
-        <li> Puerto de San Nicolás de los Arroyos</li>
-
-        <li> Puerto de Campana</li>
-
-        <li> Puerto de La Plata</li>
-
-        <li> Puerto de Mar del Plata</li>
-
-        <li> Puerto de Quequén</li>
-    </ul>
-    </p>
-
+    <img src="/asests/imagenes/Puertos.jpg" alt="Puertos" width="30%">
+    
 
     <h3> Ferrocarril</h3>
 
@@ -423,6 +407,9 @@
         ferroviarios de pasajeros operados por la empresa estatal Trenes Argentinos.
 
     </p>
+    <br> 
+    <img src="/asests/imagenes/ferrocarriles.jpg" alt="ferrocarriles" width="30%">
+
     <p> Paradójicamente y contraria a la situación en otras provincias, ningún servicio de larga distancia de pasajeros
         que esté operativo actualmente en el país tiene traza o circula por la ciudad capital (La Plata)
         de la provincia, situación que pone de manifiesto la influencia y peso que sigue teniendo la ciudad de Buenos
@@ -445,3 +432,6 @@
 </body>
 
 </html>
+
+
+<!-- San Martín Valentina  -->
